# OnlineVerfication

./: README.md
concert_examples/: IKTrackmethod.py  ik.py  learning.py  learningDQN.py  pino_6dof.py  require_IK.py  test_clt.py  trac_ik.py
fcl_test/: CMakeLists.txt  package.xml
fcl_test/msg/: state.msg
fcl_test/py_srv/: test_srv.py  test_srv2.py
fcl_test/src/include/: Hieracy_ModularRobot.h  IK_qp.h  MPC_Optimal.h  Training_MPC.h  admittance_controller.h  replan.h  rrtstar.h  traj.h
fcl_test/src/sources/: End_Orentation.txt  End_Pos.txt  End_des_EndVeclocity.txt  Hieracy_ModularRobot.cpp  IK_compare_sing.cpp  IK_compare_sing_ag.cpp  IK_compare_sing_ag2.cpp  IK_qp.cpp  IK_qp.h  LeastSquare.cpp  MPCMODULAR_TEST.cpp  MPC_HiModular.cpp  MPC_Optimal.cpp  MPConlineVerfication.cpp  Mosek_test.cc  MpcControl (copy).cpp  MpcControl copy.cpp  MpcControl_Center (copy).cpp  MpcControl_Center copy.cpp  MpcControl_Center.cpp  MpcControl_CenterTest.cpp  MpcControl_Compare (copy).cpp  MpcControl_Compare.cpp  MpcControl_HiMPC.cpp  Output_GroundTruth.cpp  Predict_4point.cpp  TF_Pub_End.cpp  Test_code.cpp  Test_code_Centauro.cpp  Training_MPC.cpp  admittance_controller.cpp  traj.cpp
fcl_test/src/sources/Hi_experiment/: MPC_HiModular_Experiment2.cpp  MPC_HiModular_Experiment2_Config.cpp  admittance_controller_MPC.cpp  impedence_controller_reference.cpp
fcl_test/src/sources/IK_compar_/IK_compar_MPC/IKcompare_HighOri/: JointPosition.txt  JointVeclotiy.txt
fcl_test/src/sources/IK_compar_/IK_compar_MPC/IKcompare_HighPos/: JointPosition.txt  JointVeclotiy.txt
fcl_test/src/sources/IK_compar_/IK_compar_ikbased/IKcompare_HighOri/: JointPosition.txt  JointVeclotiy.txt
fcl_test/src/sources/IK_compar_/IK_compar_ikbased/IKcompare_HighPos/: JointPosition.txt  JointVeclotiy.txt
fcl_test/src/sources/multiobjectcollision/: onlinereplan.cpp
fcl_test/src/traning_MPC/: IK_service.cpp  IKtest.cpp  training_MPCIK.cpp
fcl_test/srv/: state_service.srv
